src-ken&y/objects/Financial_Report_Section_Data__c.object
<CustomObject>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field100__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Field100</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field101__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Field101</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field102__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Field102</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Report_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Report Section</label>
        <referenceTo>Financial_Report_Section__c</referenceTo>
        <relationshipLabel>Financial Report Section Data</relationshipLabel>
        <relationshipName>Financial_Report_Section_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_Key__c</fullName>
        <externalId>true</externalId>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Section Data</label>
    <nameField>
        <displayFormat>FINDATA-{0000000}</displayFormat>
        <label>Financial Report Section Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Report Section Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>